--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -167,7 +167,7 @@
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
                                     <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_107" aria-expanded="true" aria-controls="collapse3">
-                                        <h4 class="mbr-fonts-style display-7">Participating Schools</h4>
+                                        <h4 class="mbr-fonts-style display-7">Past Recipients</h4>
                                     </a>
                                 </div>
                                 <div id="collapse3_107" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
@@ -180,17 +180,13 @@
 <br>Angelee Coleman 
 <br>Ashley Stead 
 <br>Cecilia Mende 
-<br>Dale Wagner 
-<br>Hayley Sims 
-<br>Julia Haire 
-<br>Gabe Healy 
+<br>Dale Wagner <br>
+Gabe Healy 
 <br>Grace Gadwood 
-<br>Gracie Cook 
-<br>Hanna Korn 
-<br>Jacob Hart 
+<br>Gracie Cook&nbsp;<br>Hanna Korn&nbsp;<br>Hayley Sims <br>Jacob Hart 
 <br>Jacob Scoville 
 <br>Jay Close 
-<br>John Nolan <br>
+<br>John Nolan <br>Julia Haire&nbsp;<br>
 Justice Geletzke<br>Kaleb Michael 
 <br>Kaleb Voisin 
 <br>Kamren Johnson 
@@ -224,10 +220,10 @@ Justice Geletzke<br>Kaleb Michael
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Camden-Frontier, 
 <br>Jonesville 
-<br>Hillsdale 
-<br>North Adams-Jerome<br> 
-Pittsford<br>Reading 
-<br>Will Carleton Academy</p>
+<br>Hillsdale <br>
+Hillsdale Preparatory School<br>Litchfield<br>North Adams-Jerome<br> 
+Pittsford<br>Reading <br>
+Waldron<br>Will Carleton Academy</p>
                                     </div>
                                 </div>
                             </div>
