--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vD/yc5sD++QMX72bLd8AJUjJqF0JZrogJOLq/pCcOdhck9lYA2wubzIM1lNIDIkIpuUy2ppqShWONG2QLcezygupHT8Rt2zFTLI1zg+nNtNpt0s34IN+t4kZFFQ9EgS/">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="arbxg9Ss0Tp8/v15fAKDxCgwjyFPcuymFUV9eyFVLjdi6bsPVMe0b1yuXfT0cDqNCvzvA5qqW+oMon0KxrgTiNp13qLSd1JWjVX90yKBm4UxYD2oCDXB2iP6rC984Gdw">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
