--- a/joe.html
+++ b/joe.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="31yEwhfbPztHkCQD2kOlLpawN6VVm+xbncxDFuHx5HFMBAIgZ6MGLGDkCG4c8ADO+/Y595Z8yr6MnmvKPC44nCn069MXiFlOaYlbIiGBTTnUkRba5JUe6H5Jj9vKuafQ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eP8+lsqoPc6y7ah28nqbp7WabMIU6vnaXqqjt5c3arnBmoHvuChJKVLD96SespEEV7B/uKfulNF8RXeGGDa1GNpCktrf6BKXyb/F4hk3QajTUa8JEHDMkJJ9/pKwawW4">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
