--- a/tracey.html
+++ b/tracey.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bNuBzrADW9O9y4FeRHBc4cXS+yDa1dYjdc8iF9hXGbdoBhxzPXw/Iv3lRbhNXsFjKB2cDdTmN4xCqvJ8wqG/SzYKm99tl3TDImS3haw0LcolU5b41KN8c6ZU+iFzjGb3">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="brngOzdNiqu+EPgWOhFqWU2rZmgJuNOmwchnSFkGC2RzDnyxJRsvVumYKD7R88sh12mXNLjiuORtGlHzljkTO+Iy5Ymg4iZmiX6cTrg2dSXTTdNT7xhqXTmxd79fpITX">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
