--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="arbxg9Ss0Tp8/v15fAKDxCgwjyFPcuymFUV9eyFVLjdi6bsPVMe0b1yuXfT0cDqNCvzvA5qqW+oMon0KxrgTiNp13qLSd1JWjVX90yKBm4UxYD2oCDXB2iP6rC984Gdw">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EOGiXYNTk/ePqzYBk0pIxWG7RidkNCPUajhEy4X/6tQ5Es4BsysX9abD0upZaIl52+XGxKuwfUUqIJx3N1mqaT0RoqiG1clrowO3+LdUhFuBMMthN/YMAxWSIRWYlbe7">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
