--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GGsUR7cwnu0hW1oyaT2fYPN1FuSdwcOP1i2Iocx7pBYvImUiXgZQgfdMrcE8a6zRoNTIYew7De+t74Lv4ggj4K3FtdYwJL3zJqHauf6CDDr56isuUXa4Js7Auf9t7l9G">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1lQsm9OiqQfIY1SHpXypSa+L3uDJoRGiSjApNI2NGmUtQiK991YaZuguI9j8SmyQ15FrayZDVA1g42vrF6zE6JMdh6XQUwvlA+PUpapvS6IoArtV2j83aB2cGCxv8wCE">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
