create github pages

--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ou6RsXr7nWYUfz0wR/RF6mWlI92VPRzlGgEH4B8YkDHolxAzQd5xTecGPeWhUGHElFW95xIVdpRaw/GSX+xsOfgf/glSQ6JIzIR5SqBMnnSCyYFDadIjdjGQICTXFXp5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mff5CWdgj6y+Uvi6SgYtwldTUclE2vYpi0EVLhQU0r50okBOmWbcLjCYZzkgqn+UfaXRBl/b3D0UvTSE3AC/figp9IGW/iwcbCXBb0EWauuUA2x+A0EZ5uGkD+dO577/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
