--- a/Newsletter.html
+++ b/Newsletter.html
@@ -47,7 +47,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">SEASONS GREETINGS</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    From Barrett Insurance</p>
+                    FROM BARRETT INSURANCE</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://www.barrettins.com" target="_blank">VISIT OUR WEBSITE</a></div>
             </div>
         </div>
@@ -56,7 +56,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section form3 cid-r8UBd7Wdbo" id="form3-6w">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section form3 cid-r8UBd7Wdbo" id="form3-6w">
 
     
 
@@ -73,7 +73,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WV0Fr2NPXy0szhpsgdjFy0jha0Ffrp9zlsM28Q+HDBlU8DI9rxK+FKBzIQ+y35CdVlI32EanjkJ6k7H/rMz6+w8I0eF1Ob24DyzxyBpnamRJNvlM5l5K+7/DLkSXSNyH">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5M29EtB+ZdI9IFPmFGtsbXxHpXSz8JrckzO7YIHqXWTpWXQTP9WCh+tHv5Yz33+YM2Bc0qzYIIYE8qjWDkmUvNGo6a8LnqAq1NDMAXqH4S/S4YGFFXiN2oCWkeKNIA9q">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6w">
                         <span class="input-group-btn">
