--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w+UbXIrxOyeKdMK7kZjU08TaWUYG7Mby+2AkP8KGhlosiZ4nHotQbWlwsWdcV2TiJUAR5aWSGSiMCBYispPZvYTX0q5ycfirO357YzHReMUP4P+RPLIJESjR52g/4HSo">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WXMiRR0kjUgHogBaNUDPRm6e43ANLjW86erqsS+hob3/IoXKXQDvDCU+nAMZDxMNJ5PumWSFi3ZoiVm2OFduUvtL5/aiIk8H3QNoIwVcaGoh5Ty8OQZTzBv6taFwYjjR">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
