--- a/ben.html
+++ b/ben.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QRUDfS+cZP+nSmfed4LPdwALd5+JsoraoUTUe3CDi8/ydQgb3p5nWT1XXPuXATlH9wCsz4SoJ/MTntYqIdtPdgcbfI4itL8k4bFsJUocA5akct+YykGGZXQ5AjPZWx9I">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="V86MUFRM7Ewdc7Rw215sRn32x/7BXWUHVa5uoc2H0f+JXUEc5cGZROZdTvcrYEI1zwLLwbLD8uUBE89c9JLnD4eVuTlwbaJ6Tgee92hyDo08X963t5J80Dq1NDCCtAM6">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
