--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c/fD5zQv3v+YeMUPIPK+NFNudObQhPlKPNZk2U/MgmXkIal53TM4Up4L8ENtb/R05HrWAxKCJQHlrAKWfZx/aPYOfFQiQpz5HI5sFl0fXZrn8za/w7bl+BwonYHve6wt">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GmuV/Eo+xRgpr/TWsvsf3+Obez7iWUsTj/7MJqYCPDYgLLwI8YyXeaSoIXEvW/eo8bqyc9BMANHULHNBbB9W3xrb2pnItzFFv5yW+tTR2rWae93Y04frY3DRSVhtDQNI">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
