create github pages

--- a/tracey.html
+++ b/tracey.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pjn6j/AAelIoyHn5Qj1lNo+qVtGFQmALlMpR7GXBWrrBiV5csUsGVAV4SfFrh1Ez/1p44xlwU0f+cqRrHiSFokpFN51wPvicl4uhYt/nq9vc+U6T9MxkKhHzsLl2TGkH">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uj134mg7bDXwWta3JXhfdqJGAxAzSuH5gwigWcnBAS1Cfc8pQCRnha4BMI4RZQAdZMyXoJ1iZ2gs0476cl4tnv7Gwv/8AvOLTrxzFLhpXL0Ie+jeLn1Xus4TDg+ramu1">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
