--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nN63Qj14OyTt4m4BqQ3mH37+0MPNH/iBUfMuHWKfyUsk8kNU3Hi2AEr78Ac+jBSceYaH1TW9Lo3V8F2tRYS9xu0hf/0nDofgTdKRGbjyLh1rFEs8c1vT43JIJZCWbfti">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fAY7QGYj2vzwHDz5tRcaq9m8016Mj2A367cUUUbADpphcS1H00rY+b1Gb0BmQbk5yjZXl7DknroEFnc6IelTaN0G7RmoUR48mcePz37Dp2RVAhSbWVM5crPtyANDCSVL">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
