create github pages

--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gWQx1sqBi0JKC06FlLDMWKwbTU53gghRkAJhdfmfo/wtI3V98M/XENpsX7ZWChOu76leDjlg5+qAkn6HVCLJnCjy1tE9UDGJltZATFbEuTtFe9lbBDoGY4bFd1K/l3fo">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Wm1ZfZg9Sdz1csBC0+VS+wWo4wQV6LetGtCph0+3RLXMQPWcR85f2f2Pf3ALIc1KdgZoB0p0xOFykrXytNbYsCDfzI3FgDadnAsu900rP/fHAkZk2TqHBjCdXsaejXNM">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
