--- a/newsletter.html
+++ b/newsletter.html
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">SEASONS GREETINGS</h1>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">HAPPY HOLIDAYS</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
                     FROM BARRETT INSURANCE</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://www.barrettins.com" target="_blank">VISIT OUR WEBSITE</a></div>
@@ -56,7 +56,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section form3 cid-r8UBd7Wdbo" id="form3-6w">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="mbr-section form3 cid-r8UBd7Wdbo" id="form3-6w">
 
     
 
@@ -73,7 +73,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DVKXZnBqolFH+lusTNEKcJyS9G35Fy9oNRW6j7MsGW3fFMKICrusyuHptOpIZO8VykcfCZ/RNk/pZSJucUTIRWm6gdlvYOck13u5Fg07SZJBH3UbSFQy7DbcJplI1O6/">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gf7EhPo4Uwggc+zvCJdE7xn4ZyvYk9QWjMCUkdJfv6jZm7XxELpMFQy1ZdPF+Va+YAxr8tcTAxICJZMCxh64MfrzDeYEd615fkJxzVAVxFiKbxpddESOHyZN0gTkkVrL">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6w">
                         <span class="input-group-btn">
