--- a/becky.html
+++ b/becky.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yo9ZOntNAawRaDJFgXgW76pCczrd3TxqiFuXCFIvEu+HIVrERi3urSoEGWENQFWlNYsoAFRMph3ITgYEuzVkbnpiMA8I89kcFoAXDrrTwq5enQFF2coS2sRFdIY+i6PH">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dys9B+1vMAN8w5eq5voIUme/63xnv3g3paa/Mzx3aMeZUHUESzgjC/5v2QNlrsIaQVMz6Oyj1wqesP2Rnt1GbXRI3xTYCmjlyU9ilAcnutB+1Xg86XYOHKdoqebSUwou">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
