--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Wm1ZfZg9Sdz1csBC0+VS+wWo4wQV6LetGtCph0+3RLXMQPWcR85f2f2Pf3ALIc1KdgZoB0p0xOFykrXytNbYsCDfzI3FgDadnAsu900rP/fHAkZk2TqHBjCdXsaejXNM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bZvcBBTV2k3GWyn5nUd2BtLdkXDPwZBfv+Vb2Si4AZHiu8UveXTKYNCWSAQek9aEbviOFEZFcRDuI24Ymt6hkBxmf9oYrYujKS5M3nwlkbAhphpNaYcvyYPqCAqL5zg4">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
