create github pages

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/logocolor-302x122.jpg" alt="Mobirise" title="" style="height: 5rem;">
+                        <img src="assets/images/logocolor-532x215.png" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
                 
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="r3X1SQRuP7YcnfvEL8M4HUGxo/A1cjkZ2LPgQTBnFC6bijUA5QZaPt0YhymZ7waTA6WSZBbY3sDxc+6oT43E8ti26BwSzQZgsDVU9rqGl0CV7bePbA87yoaMKvLwc5Yv">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JgSWy1s9aDpMqL3UVDfIbCLadLbDpTb0E3OzEqqZdLeuX6kKt2L44KtYQmqUbuXU8NZhv7GpWIqz+UUtJP2iF7oTbCLLZ7LGuv35Paw+D4ox7/pMUWl/npu9JDbQiQ9J">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -352,7 +352,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <a href="frank.html"><img src="assets/images/20180919-1117401-397x276.png" alt="" title=""></a>
+                    <a href="frank.html"><img src="assets/images/20180919-1117402-397x276.png" alt="" title=""></a>
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
