--- a/media.html
+++ b/media.html
@@ -53,7 +53,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/logocolor-302x122.jpg" alt="Mobirise" title="" style="height: 5rem;">
+                        <img src="assets/images/logocolor-532x215.png" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
                 
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
 
     
 
