--- a/cyndi.html
+++ b/cyndi.html
@@ -53,7 +53,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/logocolor-302x122.jpg" alt="Mobirise" title="" style="height: 5rem;">
+                        <img src="assets/images/logocolor-532x215.png" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
                 
@@ -124,7 +124,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/dsc0138-436x291.png" alt="Mobirise" title="">  
+                      <img src="assets/images/-dsc0138-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Dk+WEjFk9WCTsRgl99KWoW2jYh17k85RDOmunuSd4QCarTp/Q5fR1Xz5tw88i5xP2rvEbVTf4HwOhQTCR8L9z1S0GUldMNfn5N2ZKsxSdS9/ayoezq8na0b4AZirrxJF">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="llLaa1h1Im960eK5GMAVE/lsFKxFV+1lMjNJto61Mq+eeZ6b+aqQ3ojPgHcuIrmswOzPIXx4RXt5EKB2rjchtzq5FHq/dIGVkZwehumx2M349Uc5FctQ09TQOSUL1ki5">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
